# Q_4_Learning

./: README.md
01_Generative_AI/: readme.md
02_FastApi/: README.md  main.py  pyproject.toml
03_Pydantic/pydantic_project/: main.py  pydantic_basic_model.py  pydantic_custom_validators.py
03_pydantic/: README.md  pydantic_nested_model.py  pyproject.toml
04_API_Parameters/: pyproject.toml
05_dependencies_injection/: pyproject.toml
06_Task_Tracher_API/: main.py  pyproject.toml  storage.py
06_Task_Tracher_API/models/: task_models.py  user_models.py
06_Task_Tracher_API/routes/: task_routes.py  user_routes.py
06_Task_Tracher_API/utils/: validators.py
07_agentic_ai/: readme.md
08_LLM/: README.md
09_ToolCalling_FunctionCalling/: readme.md
11_Poetry_Agent/: main.py  pyproject.toml
12_Handoff_Agent/: main.py  pyproject.toml
13_Tracing_Handoff_Tool/: main.py  pyproject.toml
crypto_agent/: main.py  pyproject.toml
